--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             </div>
             <div class="w3-col l4  w3-dark-grey">
                 <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
-                <p><a href="https://t.me/Cosmos965151" target="_blank" title="Telegram" style="text-decoration: underline; color: white;"> Telegram : @takashi.johnson
+                <p><a href="https://t.me/takashi_johnson" target="_blank" title="Telegram" style="text-decoration: underline; color: white;"> Telegram : @takashi_johnson
                  </a></p>
             </div>
         </div>
